# gpu-task

./: .gitignore  CMakeLists.txt  README.md  a.out  cmd.sh  cpp.out  makefile  makefilex  testOpencl.ncb  testOpencl.sln
Debug/: testOpencl.ilk
kernel/: kernel.cl  kernel1.cl  kernel2.cl
src/: GPUTask.cpp  GPUTask.h  main.cpp  opencl_sample.cpp  setup_opencl.cpp  setup_opencl.h
src/c/: helper.cpp  helper.h  main.cpp  setup_opencl.cpp
src/cpp/: GPUTask.cpp  GPUTask.h  OpenCLTask.cpp  OpenCLTask.h  Task1.cpp  Task1.h  main.cpp
testOpencl/: kernel.cl  kernel2.cl  main.cpp  setup_opencl.cpp  setup_opencl.h  testOpencl.vcproj
testOpencl/Debug/: BuildLog.htm  mt.dep  vc90.idb
